# Real-time-Object-Detection-On-Device

./: .gitignore  README.md  build.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/leek/my_usb/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/model/: MobileNetSSD_deploy.prototxt
app/src/main/cpp/: Obs_util.cpp  native-lib.cpp  yuv2rgb.cpp
app/src/main/include/leek_include/: Obs_util.h  mssd.h  yuv2rgb.h
app/src/main/java/com/example/leek/my_usb/: AlertHandler.java  AlertThread.java  DetectManager.java  MainActivity.java  ObstacleManager.java  Utilmanager.java
app/src/main/jni/: detect.cpp
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/leek/my_usb/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
libusbcamera/: build.gradle
